# miratope-rs

./: Cargo.toml
miratope-core/: Cargo.toml
miratope-core/src/: geometry.rs  lib.rs
miratope-core/src/abs/: flag.rs  mod.rs  ranked.rs
miratope-core/src/conc/: faceting.rs  mod.rs  symmetry.rs  wythoff.rs
miratope-core/src/cox/: cd.rs  mod.rs
miratope-core/src/file/: mod.rs
miratope-core/src/file/off/: mod.rs
miratope-core/src/group/: cyclic.rs  gen_iter.rs  group_item.rs  mod.rs  permutation.rs
src/: main.rs  mesh.rs
src/no_cull_pipeline/: forward.frag  mod.rs
src/ui/: camera.rs  config.rs  main_window.rs  memory.rs  mod.rs  right_panel.rs  top_panel.rs  window.rs
vec-like/: Cargo.toml
vec-like/src/: lib.rs
