[workspace]
members = ["miratope-core", "vec-like"]

[package]
name = "miratope"
description = "A polytope renderer and builder."
license = "MIT"
version = "0.4.13"
repository = "https://github.com/galoomba1/miratope-rs"
keywords = ["polytope", "dimension", "geometry"]
authors = [
    "Violeta Hernández <vi.hdz.p@gmail.com>",
    "Grayson Burton <ocornoc@protonmail.com>",
    "Roman Salinas <ultraroman01@gmail.com>"
]
edition = "2021"
resolver = "2"

[dependencies]
miratope-core = { path = "miratope-core" }
vec-like = { path = "vec-like" }
approx = "0.5.1"
directories = "4.0.1"
lyon = "1.0.0"
ordered-float = "3.2.0"
rfd = "0.10.0"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
webbrowser = "0.8.0"
bevy_egui = "0.16.1"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "x11",
]

[profile.release]
lto = "thin"
incremental = true
