[workspace]
members = ["miratope-core", "vec-like"]
resolver = "2"

[package]
name = "miratope"
description = "A polytope renderer and builder."
license = "MIT"
version = "0.5.0"
repository = "https://github.com/galoomba1/miratope-rs"
keywords = ["polytope", "dimension", "geometry"]
authors = [
    "Violeta Hernández <vi.hdz.p@gmail.com>",
    "Grayson Burton <ocornoc@protonmail.com>",
    "Roman Salinas <ultraroman01@gmail.com>"
]
edition = "2024"

[dependencies]
miratope-core = { path = "miratope-core", features = ["bevy"] }
vec-like = { path = "vec-like" }
approx = "0.5.1"
directories = "6.0"
lyon = "1.0.1"
rfd = "0.15.4"
ron = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
bevy_egui = "0.36"
tracing-subscriber = "0.3.19" #Low-key load bearing, makes another dependency work right
#It's likely that now that's upgraded, it could be removed without issue
# Changed features to adjust to the latest Bevy version's naming scheme
[dependencies.bevy]
version = "0.16.1"
#git = "https://github.com/bevyengine/bevy"
#branch = "main"
default-features = false
features = [
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "hdr",
    "x11"
]

# Bevy egui integration with this latest version.
#[dependencies.bevy_egui]
#git = "https://github.com/vihdzp/bevy_egui/"
#branch = "bevy-main"

[dependencies.egui]
version = "0.32.1"
default-features = false



#[patch.crates-io]
#winit = { git = "https://github.com/vihdzp/winit" }

[profile.release]
lto = "thin"
incremental = true