[workspace]
members = ["miratope-core", "vec-like"]
resolver = "2"

[package]
name = "miratope"
description = "A polytope renderer and builder."
license = "MIT"
version = "0.5.0"
repository = "https://github.com/galoomba1/miratope-rs"
keywords = ["polytope", "dimension", "geometry"]
authors = [
    "Violeta Hernández <vi.hdz.p@gmail.com>",
    "Grayson Burton <ocornoc@protonmail.com>",
    "Roman Salinas <ultraroman01@gmail.com>"
]
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
miratope-core = { path = "miratope-core", features = ["bevy"] }
vec-like = { path = "vec-like" }
approx = "0.5.1"
directories = "6.0"
lyon = "1.0"
rfd = "0.15.4"
ron = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
bevy_egui = { version = "0.36", default-features = false, features = ["default_fonts", "render", "bevy_ui"] }

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "tonemapping_luts",
    "bevy_log",
    "bevy_gltf",
    "bevy_winit",
    #"bevy_render", only unneded because bevy_egui adds it back
]






[profile.release]
lto = "thin"
incremental = true