[package]
name = "miratope-core"
version = "0.4.13"
edition = "2018"

[dependencies]
vec-like = { path = "../vec-like" }
approx = "0.5.1"
dyn-clone = "1.0.9"
gcd = "2.0"
itertools = "0.10"
nalgebra = { version = "0.29", features = ["serde-serialize"] }
ordered-float = "2.4"
partitions = "0.2.4"
petgraph = "0.6"
rayon = "1.5"
ron = "0.6"
serde = { version = "1.0.145", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
unchecked_unwrap = "3"
xml-rs = "0.8"
zip = "0.5"
