[package]
name = "miratope-core"
version = "0.5.0"
edition = "2024"

[dependencies]
vec-like = { path = "../vec-like" }
approx = "0.5.1"
gcd = "2.3.0"
itertools = "0.14"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
ordered-float = "5.0.0"
partitions = "0.2.4"
petgraph = "0.8.2"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.27.2"
unchecked_unwrap = "4"
xml-rs = "1.0.0"
zip = "5.1.1"

# enables extra traits needed for the bevy frontend
[dependencies.bevy]
version = "0.17.2"
default-features = false
optional = true